Correcciones en tablas presupuestos

--- a/src/static/css/styleLayout.css
+++ b/src/static/css/styleLayout.css
@@ -343,3 +343,13 @@ a.link {
 
 }
 
+.info_user{
+  font-size: 9px;
+  font-family: arial;
+  background-color: #f8f9fa;
+}
+
+.btn-cerrar-session{
+  font-size: 9px;
+
+}
