--- a/src/templates/altaProyectoObra.html
+++ b/src/templates/altaProyectoObra.html
@@ -141,11 +141,44 @@
                                 
                                 <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
                                     <label for="MUNICIPIO" class="form-label">MUNICIPIO*</label>
-                                    <input type="text" class="form-control" name="MUNICIPIO" id="MUNICIPIO"
-                                        placeholder="Municipio" required>
-                                    <div class="invalid-feedback">
-                                        COMPLETA MUNICIPIO
-                                    </div>
+                                    <select id="ESTADO" class="form-control" name="ESTADO" required>
+                                        <option value="" style="text-align: center;">SELECIONA</option>
+                                        <option value="AGUASCALIENTES">AGUASCALIENTES</option>
+                                        <option value="BAJA CALIFORNIA">BAJA CALIFORNIA</option>
+                                        <option value="BAJA CALIFORNIA SUR">BAJA CALIFORNIA SUR</option>
+                                        <option value="CHIAPAS">CHIAPAS</option>
+                                        <option value="CHIHUAHUA">CHIHUAHUA</option>
+                                        <option value="CIUDAD DE MÉXICO">CIUDAD DE MÉXICO</option>
+                                        <option value="COAHUILA">COAHUILA</option>
+                                        <option value="COLIMA">COLIMA</option>
+                                        <option value="DURANGO">DURANGO</option>
+                                        <option value="ESTADO DE MÉXICO">ESTADO DE MÉXICO</option>
+                                        <option value="GUANAJUATO">GUANAJUATO</option>
+                                        <option value="GUERRERO">GUERRERO</option>
+                                        <option value="HIDALGO">HIDALGO</option>
+                                        <option value="JALISCO">JALISCO</option>
+                                        <option value="MICHOACÁN">MICHOACÁN</option>
+                                        <option value="MORELOS">MORELOS</option>
+                                        <option value="NAYARIT">NAYARIT</option>
+                                        <option value="NUEVO LEÓN">NUEVO LEÓN</option>
+                                        <option value="OAXACA">OAXACA</option>
+                                        <option value="PUEBLA">PUEBLA</option>
+                                        <option value="QUERÉTARO">QUERÉTARO</option>
+                                        <option value="QUINTANA ROO">QUINTANA ROO</option>
+                                        <option value="SAN LUIS POTOSÍ">SAN LUIS POTOSÍ</option>
+                                        <option value="SIN LOCALIDAD">SIN LOCALIDAD</option>
+                                        <option value="SINALOA">SINALOA</option>
+                                        <option value="SONORA">SONORA</option>
+                                        <option value="TABASCO">TABASCO</option>
+                                        <option value="TAMAULIPAS">TAMAULIPAS</option>
+                                        <option value="TLAXCALA">TLAXCALA</option>
+                                        <option value="VERACRUZ">VERACRUZ</option>
+                                        <option value="YUCATÁN">YUCATÁN</option>
+                                        <option value="ZACATECAS">ZACATECAS</option>
+                                      </select>
+                                      <div class="invalid-feedback">
+                                        SELECIONA UN ESTADO
+                                      </div>
                                 </div>
                                 <div class="col-lg-2 col-md-2 col-sm-12 col-xs-12">
                                     <label for="PAIS" class="form-label">PAÍS*</label>
