--- a/src/templates/login.html
+++ b/src/templates/login.html
@@ -4,10 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Inicio de Sesión</title>
+    <title>INICIO DE SESIÓNn</title>
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="icon" type="image/x-icon" href="{{ url_for('static', filename='Buart.ico') }}">
+
     <!-- SweetAlert CSS -->
     <link rel="stylesheet" href="@sweetalert2/themes/dark/dark.css">
     <script src="sweetalert2/dist/sweetalert2.min.js"></script>
@@ -112,7 +114,7 @@
                                 </div>
                             </div>
                             <div class="d-grid">
-                                <button type="submit" class="btn">Iniciar Sesión</button>
+                                <button type="submit" class="btn">INICIAR SESIÓN</button>
                             </div>
                         </form>
                     </div>
