--- a/src/templates/altaClientes.html
+++ b/src/templates/altaClientes.html
@@ -301,9 +301,9 @@
                                     </div>
                                 </div>
                                 <div class="col-lg-6 col-md-5 col-sm-12 col-xs-12">
-                                    <label for="USO_CFDI" class="form-label">Uso de CFDI:</label>
+                                    <label for="USO_CFDI" class="form-label">USO DE CFDI:</label>
                                     <select class="form-control" name="USO_CFDI" id="USO_CFDI" required>
-                                        <option value="" style="text-align: center;">------Selecciona------</option>
+                                        <option value="" style="text-align: center;">SELECIONA</option>
                                     </select>
                                     <div class="invalid-feedback">
                                         SELECIONA USO DE CFDI
